Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-100831

Model spams with Vertex buffer empty warning

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.3.0 Beta3, 6.4.0 Beta1
    • 6.3.0 Beta1
    • Quick: 3D
    • None
    • Windows
    • 734087d8ae (qt/qtquick3d/dev) a5c5796f8f (qt/qtquick3d/6.3) a5c5796f8f (qt/qtquick3d/6.3.0) a5c5796f8f (qt/tqtc-qtquick3d/6.3.0)
    • Qt Quick 3D: Week 7 - 8

      The only way to clean model vertex data without clearing attributes is to set empty QByteArray. But if it is done this way, Model nodes start sending a lot of warnings:
      "Mesh building failed: Vertex buffer empty"

      To reproduce run the example from:
      https://bugreports.qt.io/browse/QTBUG-100830

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lagocs Laszlo Agocs
            alexey89 alexey89
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes