Silence empty vertex buffer warning from mesh building

Pick-to: 6.3 6.2
Fixes: QTBUG-100831
Change-Id: Id5a50de1384f6bd269aeca4032fc6026c0e06497
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Andy Nichols <andy.nichols@qt.io>